--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,12 +64,37 @@ a:hover {
 }
 
 #main-body {
-  width: 80%;
-  margin: 20px auto;
+  width: 70%;
+  margin: 100px auto;
 }
 
 #welcome-section {
-  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.aside-welcome {
+  margin: 60px;
+}
+
+.aside-welcome h1 {
+  color: var(--nav-items);
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.aside-welcome h2,
+h2 {
+  color: var(--nav-items);
+  font-size: 2.3rem;
+  font-weight: bold;
+}
+
+#profile-img {
+  border-radius: 50%;
+  width: 400px;
 }
 
 footer {
