--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
   --secondary-main-body: #eee9da;
   --nav-footer: #6096b4;
   --nav-items: #fff;
-  --hover-color: #eee9da;
+  --hover-color: #362fd9;
 }
 
 *,
@@ -19,21 +19,26 @@ html {
   font-size: 62.5%;
 }
 
+header {
+  /* height: 100px; */
+}
+
 body {
   font-size: 1.3rem;
   line-height: 1.6;
-  background-color: var(--primary-main-body);
+  /* background-color: var(--primary-main-body); */
   font-family: Helvetica, Arial, sans-serif;
 }
 
 #navbar {
-  background-color: var(--nav-footer);
-  margin-bottom: 30px;
+  /* background-color: var(--nav-footer); */
+  /* background-color: aqua; */
+  /* margin-bottom: 50px; */
   font-size: 1.5rem;
   width: 100%;
   position: fixed;
   top: 0;
-  border-bottom: 2px solid var(--nav-items);
+  /* border-bottom: 2px solid var(--nav-items); */
   padding: 20px 40px;
   font-weight: bold;
   /* color: var(--nav-items); */
@@ -43,8 +48,6 @@ body {
   display: flex;
   list-style-type: none;
   gap: 2%;
-  position: relative;
-  top: 0;
   text-decoration: none;
   /* color: var(--nav-items); */
 }
@@ -54,40 +57,42 @@ body {
 }
 
 .navbar-main .nav-link {
-  color: var(--nav-items);
+  /* color: var(--nav-items); */
   text-decoration: none;
 }
 
 .nav-link:hover,
 a:hover {
-  color: var(--hover-color);
+  /* color: var(--hover-color); */
 }
 
 #main-body {
   width: 70%;
-  margin: 100px auto;
+  margin: 0 auto;
 }
 
 #welcome-section {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-bottom: 50px;
+  margin: 80px 0 0 0;
+  min-height: 700px;
+  /* background-color: aqua; */
 }
 
 .aside-welcome {
-  margin: 60px;
+  /* margin: 60px; */
 }
 
 .aside-welcome h1 {
-  color: var(--nav-items);
-  font-size: 2.5rem;
+  /* color: var(--nav-items); */
+  font-size: 3rem;
   font-weight: bold;
 }
 
 .aside-welcome h2,
 h2 {
-  color: var(--nav-items);
+  /* color: var(--nav-items); */
   font-size: 2.3rem;
   font-weight: bold;
 }
@@ -97,14 +102,169 @@ h2 {
   width: 400px;
 }
 
-footer {
-  border-top: 2px solid var(--nav-items);
-  background-color: var(--nav-footer);
-  /* height: 20px; */
-  padding: 20px 40px;
+#projects {
+  margin: 50px 0 25px 0;
+  min-height: 700px;
+  /* background-color: aqua; */
+}
+
+#projects h2 {
+  margin-bottom: 30px;
+}
+
+#projects h2,
+.project-tile {
   text-align: center;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.image-item {
+  width: 100%;
+  max-width: 350px;
+  height: 350px;
+  object-fit: cover;
+}
+
+#blog {
+  /* background: #362fd9; */
+  min-height: 700px;
+  margin: 100px 0 100px 0;
+  /* text-align: center; */
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 50px;
+  /* background-color: aqua; */
+}
+
+#blog h2 {
+  /* text-align: center; */
+  /* padding: 20px; */
+}
+
+#blog ul li {
+  /* text-decoration: none; */
+  list-style: none;
+}
+
+#hire {
+  font-size: 2rem;
+  /* background: #362fd9; */
+  min-height: 700px;
+  text-align: center;
+  /* background-color: aqua; */
+}
+
+#hire h2 {
+  /* text-align: center; */
+}
+
+.fa-brands {
+  margin: 30px 40px;
+}
+
+ul li a,
 footer a {
   text-decoration: none;
+}
+
+footer {
+  border-top: 2px solid var(--nav-items);
+  /* background-color: var(--nav-footer); */
+  /* height: 20px; */
+  padding: 20px 40px;
+  text-align: center;
+  /* background-color: aqua; */
+}
+
+@media (max-width: 960px) {
+  header {
+    height: 100px;
+  }
+
+  #navbar {
+    /* background-color: aqua; */
+    font-size: 1.5rem;
+    width: 100%;
+    position: fixed;
+    top: 0;
+  }
+
+  .navbar-main {
+    display: grid;
+    list-style-type: none;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  #brand-name {
+    visibility: hidden;
+  }
+
+  #main-body {
+    width: 100%;
+  }
+
+  #welcome-section {
+    display: grid;
+    width: 100%;
+    min-height: 100%;
+    justify-items: center;
+  }
+
+  .aside-welcome h1,
+  .aside-welcome h2,
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  #profile-img {
+    border-radius: 50%;
+    width: 200px;
+  }
+
+  #projects {
+    height: 100%;
+    /* background-color: aqua; */
+    justify-content: center;
+  }
+
+  /* .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-n;
+} */
+
+  /*
+  .image-item {
+    width: 300px;
+    height: 300px;
+  }
+  */
+  #blog {
+    /* background: #362fd9; */
+    min-height: 100%;
+    margin: 50px 0 50px 0;
+    /* text-align: center; */
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 25px;
+    /* background-color: aqua; */
+  }
+
+  #hire {
+    display: grid;
+    width: 100%;
+    min-height: 100%;
+  }
 }
